# cpp_dos_environment

./: elf.xcf  test.pcx
DP2/: DP_PREFS  Leeme.txt
PLATFORM/: CMakeLists.txt  readme.md
PLATFORM/SRC/: main.c
PLATFORM/SRC/assetgen/: elf.c
PLATFORM/SRC/asstload/: assetld.c  pcxload.c
PLATFORM/SRC/input/: input.c
PLATFORM/SRC/utils/: logger.c
PLATFORM/SRC/video/: video.c
PLATFORM/assets/: blank.pcx  elf.ass  elf.pcx  gradient.pcx  masked.pcx  woman.pcx
PLATFORM/inc/: types.h
PLATFORM/inc/asstload/: assetld.h  pcxload.h
PLATFORM/inc/image/: image.h
PLATFORM/inc/input/: input.h
PLATFORM/inc/utils/: logger.h
PLATFORM/inc/video/: video.h
WATCOM/EDDAT/: VI.HIS
WATCOM/H/: LIMITS.H
game01/: CMakeLists.txt  hello.cpp
hello/: .gitignore  CLEANBLD.bat  DUDE3.PCX  FACE.PCX  FACE2.PCX  FOO.PCX  GAMEOBJS.C  GAMEOBJS.H  HELLO.C  Hero.pcx  IMAGE.H  INPUT.C  INPUT.H  LOADBMP.C  LOADBMP.H  LOADPCX.H  LOG.TXT  LOGGER.C  LOGGER.H  MAIN.C  MAKEFILE  PCX_TEST.PCX  README.TXT  SPRITE.H  TEST.PCX  TEST2.PCX  UTILS.C  UTILS.H  VECTOR.C  VECTOR.H  VIDEO.C  VIDEO.H  _BACKUP_.PCX  br.pcx  dude.pcx  dude2.pcx  masked.pcx  mysheet.pcx  sheet.pcx  soldier.raw  (+1 more)
mylib/: makefile  vector.cpp  vector.h
